using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class KeyConstants
{
    public static string Anim_Run = "Run";
    public static string Anim_Idle = "Idle";
    public static string Anim_Win = "Win";
    public static string Anim_Falling = "Falling";
    public static string Tag_Player = "Player";
    public static float Speed_Player = 5f;
    public static string KEY_LEVEL_USER = "key_level_user";
}

public class PathConstants
{
    public static string PATH_CHARACTER = "Character/";
    public static string PATH_MAP = "Maps/";
}

